# PHYS4070Assignment2

./: CMakeLists.txt
Docs/: PHYS4070 ODEs and Markov chain Monte Carlo.docx  Readme.docx
Part_1/: __compile_and_run.bat  __compile_and_run.sh  forces_and_integrators.cpp  forces_and_integrators.hpp  manybody_example.hpp  params.hpp  simulation  simulation.cpp  sysvec_utils.cpp  sysvec_utils.hpp  vector_utils.cpp
Part_1/results/: _plot_1a.py  _plot_1b.py  _plot_1c.py  _plot_1d.py
Part_2/: __compile_and_run.bat  __compile_and_run.sh  grid.hpp  monte_carlo.cpp  monte_carlo.hpp  rand_test  rand_test.cpp  rand_utils.cpp  rand_utils.hpp  singlegrid  singlegrid.cpp  singlegrid_parallel  singlegrid_parallel.cpp  temp_sweep  temp_sweep.cpp  vector_utils.cpp  vector_utils.hpp
Part_2/results/: Runtimes.xlsx  _plot_2a.py  _plot_2b.py  _plot_2c.py  _plot_2debug.py
